--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "prebuild": "npx expo prebuild"
+    "prebuild": "npx expo prebuild",
+    "build:android:local": "npx eas build --profile development --platform android --local"
   },
   "jest": {
     "preset": "jest-expo"
