--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "modak-technical-challenge",
-    "slug": "modak-technical-challenge",
+    "name": "Dummyshop",
+    "slug": "dummyshop",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "modaktechnicalchallenge",
+    "scheme": "dummyshop",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -15,7 +15,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.manubolla.modaktechnicalchallenge",
+      "bundleIdentifier": "com.manubolla.dummyshop",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
@@ -26,16 +26,14 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.manubolla.modaktechnicalchallenge"
+      "package": "com.manubolla.dummyshop"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     },
